# gurlon

./: .gitignore  404.html  CHANGELOG.md  README.md  index.html  justfile  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: bumpversion.yml  docs.yml  gitleaks.yml  lint.yml  pytest.yml  release.yml
docs/: index.md
docs/usage/: download.md  export.md  transform.md
search/: search_index.json
src/gurlon/: __init__.py  dynamodb.py  processor.py  s3.py
src/gurlon/squeal/: creator.py  models.py
tests/: conftest.py  dynamodb_test.py  processor_test.py
tests/integration/: download.py  transform.py
tests/squeal/: creator_test.py
