[project]
name = "gurlon"
version = "0.1.0"
description = "Transform unstructured DynamoDB data into local SQL tables."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Zach Fuller", email = "zach.fuller1222@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35.68",
    "pydantic>=2.10.1",
    "structlog>=24.4.0",
]

[project.scripts]
gurlon = "gurlon:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "boto3-stubs[essential]>=1.35.68",
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "ruff>=0.8.0",
]
